# ball_com

./: main.py  pyproject.toml
app/core/: auth_utils.py  config.py  database.py
app/routers/: amazon.py  auth.py  spreadsheet.py  webhooks.py
app/schemas/: __init__.py  amazon.py  auth.py  enums.py  fetch_from_doc.py  product_details.py  product_offers.py  product_reviews.py  product_search.py  products_by_category.py  review_details.py  scrape_url.py  spreadsheet.py  top_reviews.py
app/security/: apple_auth.py
app/services/: amazon_service.py  google_doc_service.py  spreadsheet_service.py
