[project]
name = "ball-com"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.60.0",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.49.0",
]
